--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <!-- Contact -->
   <section id="contact" class="fade-up">
     <h2>Contact</h2>
-    <p>Email me: <a href="mailto:a66618945@gmail.com">a66618945@gmail.com</a></p>
+    <p>Connect on <a href="mailto:a66618945@gmail.com">Email</a></p>
     <p>
       Connect on
       <a href="https://www.linkedin.com/in/abdullah-sajid-53aa80294" target="_blank">LinkedIn</a>
