--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <section id="about" class="fade-up">
     <h2>About Me</h2>
     <p>
-      I'm a dedicated Computer Science student with experience in Java, Web Development, and C Programming.
+      I'm a dedicated Computer Science & Engineering student with experience in Java, Web Development and C Programming.
       I love building real-world solutions and continuously improving my skills.
     </p>
   </section>
@@ -55,7 +55,6 @@
       <div class="chip">HTML</div>
       <div class="chip">CSS</div>
       <div class="chip">JavaScript</div>
-      <div class="chip">Git & GitHub</div>
       <div class="chip">Problem Solving</div>
     </div>
   </section>
@@ -70,7 +69,7 @@
       </div>
       <div class="card">
         <h3>Restaurant System</h3>
-        <p>Java-based app for managing menus, orders, and staff with JavaFX UI.</p>
+        <p>Java-based app for managing menus, orders, and staff.</p>
       </div>
       <div class="card">
         <h3>DriffyFit Website</h3>
