--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   <!-- Contact -->
   <section id="contact" class="fade-up">
     <h2>Contact</h2>
-    <p>Connect on <a href="mailto:a66618945@gmail.com">Email</a></p>
+    <p>Connect on <a href="mailto:abdullah.sajid.7124@gmail.com">Email</a></p>
     <p>
       Connect on
       <a href="https://www.linkedin.com/in/abdullah-sajid-53aa80294" target="_blank">LinkedIn</a>
