--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <section id="github" class="fade-up">
     <h2>GitHub</h2>
     <p>Explore my repositories and open-source work:</p>
-    <a href="https://github.com/open-source-owl" class="btn" target="_blank">Visit GitHub</a>
+    <a href="https://github.com/AbdullahSajid007" class="btn" target="_blank">Visit GitHub</a>
   </section>
 
   <!-- Resume -->
